<resources>
    <string name="app_name">UsTravel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_myTrips">My Trips</string>
    <string name="menu_tripsFeed">Trips Feed</string>
    <string name="menu_myFavorites">My Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_day">Add Day</string>

        <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
        <string name="facebook_application_id" translatable="false">634910414287670</string>
        <string name="facebook_login_protocol_scheme" translatable="false">fb634910414287670</string>
    <string name="enter_day_s_name">Enter Day\'s Name</string>
    <string name="start_date">Start Date</string>
    <string name="enter_start_date">Enter Start Date</string>
    <string name="end_date">End Date</string>
    <string name="enter_end_date">Enter End Date</string>
    <string name="create_trip">Create Trip</string>
    <string name="add_trip">Add Trip</string>
    <string name="destination">Destination</string>
    <string name="enter_trip_destination">Enter Trip Destination</string>

</resources>