<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTripFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/addTrip_TV_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/add_trip"
        android:textColor="@color/palette6"
        android:textSize="40sp" />

    <View
        android:id="@+id/line_vw_line"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:background="@color/palette6"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        />



                        <!--DESTINATION-->

    <TextView
        android:id="@+id/addTrip_TV_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_vw_line"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/destination"
        android:textSize="20sp"
        android:textColor="@color/palette6"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addTrip_TI_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addTrip_TV_destination"
        android:layout_marginStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:minLines="1"
            android:backgroundTint="@color/palette2"
            android:textColor="@color/palette6"
            android:textColorHint="@color/palette6"
            android:hint="@string/enter_trip_destination"
            />
    </com.google.android.material.textfield.TextInputLayout>

                      <!--START DATE-->

    <TextView
        android:id="@+id/addTrip_TV_startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addTrip_TI_destination"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/start_date"
        android:textColor="@color/palette6"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/addTrip_StartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addTrip_TV_startDate"
        android:ems="10"
        android:hint="@string/enter_start_date"
        android:textColor="@color/palette6"
        android:maxLines="1"
        android:minLines="1"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date"
        android:minHeight="48dp" />

    <!--END DATE-->

    <TextView
        android:id="@+id/addTrip_TV_EndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addTrip_StartDate"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/palette6"
        android:textSize="20sp"
        android:text="@string/end_date" />


    <EditText
        android:id="@+id/addTrip_EndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addTrip_TV_EndDate"
        android:ems="10"
        android:hint="@string/enter_end_date"
        android:inputType="date"
        android:maxLines="1"
        android:minHeight="48dp"
        android:minLines="1"
        android:clickable="false"
        android:textColor="@color/palette6"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addTrip_BTN_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/palette3"
        android:text="@string/create_trip" />


</RelativeLayout>